fixed z-index which meant start button couldn't be click after float change to other elements

--- a/gol.css
+++ b/gol.css
@@ -53,7 +53,6 @@ aside h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: -1;
 }
 
 .btn {
